fix wrap flex

--- a/front/app/css/general.less
+++ b/front/app/css/general.less
@@ -316,7 +316,7 @@ header {
 .up-ticket {
     position: relative;
     margin: 0 0.75em 0.75em;
-    &:not(.up-zone-picker .divided){
+    &:not(.up-zone-picker, .divided){
         padding: 1.5em;
     }
     &:not(.up-zone-picker){
@@ -526,6 +526,8 @@ header {
 }
 
 .up-deconnection{
-    display: inline !important;
-    margin: 0.75 30% !important;
+    a{
+        display: inline !important;
+    }
+    margin-bottom:2em;
 }
